src/main/java/com/example/demo/application/authentication/errors/InvalidRefreshTokenException.java
package com.example.demo.application.authentication.errors;

import org.springframework.http.HttpStatus;
import org.springframework.web.bind.annotation.ResponseStatus;

@ResponseStatus(code = HttpStatus.BAD_REQUEST)
public class InvalidRefreshTokenException extends RuntimeException {
    public InvalidRefreshTokenException() {
        super("Invalid refresh token!");
    }
}
